ALT: Azure: Move `test_commands` tests out to its own environment
Due to the memory pressure `test_commands` tests always fail.

--- a/ipatests/azure/azure_definitions/gating-altlinux.yml
+++ b/ipatests/azure/azure_definitions/gating-altlinux.yml
@@ -93,6 +93,7 @@ vms:
     tests:
     - test_integration/test_commands.py
 
+- vm_jobs:
   - container_job: ServerReplicaCALessToCAFull
     tests:
     - test_integration/test_caless.py::TestServerReplicaCALessToCAFull
