Azure: Make artifacts' name unique within Job attempts
This fixes rerun of failed jobs where Azure failed to publish
artifacts having the same names.

--- a/ipatests/azure/templates/test-jobs.yml
+++ b/ipatests/azure/templates/test-jobs.yml
@@ -124,4 +124,4 @@ steps:
 
 - template: save-test-artifacts.yml
   parameters:
-    logsArtifact: logs-$(System.JobIdentifier)-$(Build.BuildId)-$(System.StageAttempt)-$(System.PhaseAttempt)-$(System.JobPositionInPhase)-$(Agent.OS)-$(Agent.OSArchitecture)
+    logsArtifact: logs-$(System.JobIdentifier)-$(Build.BuildId)-$(System.JobAttempt)-$(System.JobPositionInPhase)
