--- a/ipatests/azure/templates/setup-test-environment.yml
+++ b/ipatests/azure/templates/setup-test-environment.yml
@@ -20,13 +20,13 @@ steps:
 - task: DownloadPipelineArtifact@0
   displayName: Download prebuilt packages
   inputs:
-    artifactName: 'packages-$(Build.BuildId)-$(Agent.OS)-$(Agent.OSArchitecture)'
+    artifactName: 'packages-$(Build.BuildId)-$(System.JobAttempt)'
     targetPath: $(Build.Repository.LocalPath)/dist
 
 - task: DownloadPipelineArtifact@0
   displayName: Download pre-built container
   inputs:
-    artifactName: 'image-$(Build.BuildId)-$(Agent.OS)-$(Agent.OSArchitecture)'
+    artifactName: 'image-$(Build.BuildId)-$(System.JobAttempt)'
     targetPath: $(Build.Repository.LocalPath)
 
 - script: |
